--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "Awesome project developed with TypeORM.",
   "dependencies": {
     "apollo-server-express": "^3.5.0",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -16,15 +18,15 @@
     "typeorm": "0.2.41"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.12",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
+    "start": "ts-node-dev src/index.ts",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   }
 }
