--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "local-storage-fallback": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-icons": "^3.0.0"
   }
 }
